Body Strucred CSS started

--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Area layout</title>
     <link rel="stylesheet" href="style.css">
-
-
-
 </head>
+
 <body>
-    <h1> This Is  Grid Area Layout</h1>
-    <p> Hello</p>
+<header>This Header section</header>
+<nav>
+    <ul>
+        <li><a href=""> NAV1 </a></li>
+        <li><a href=""> NAV2 </a></li>
+        <li><a href=""> NAV3 </a></li>
+    </ul>
+</nav>
+ <main>
+    <h2>This is Main Aritcale area </h2>
+    <p>Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Iste dignissimos id
+         voluptate quos voluptas fugit, maxime
+          quo ullam culpa corporis possimus, 
+          ea unde natus deserunt,
+         labore aperiam dolores voluptatum. Culpa!</p>
+ </main>
+    <aside>
+        <div class="sidebar"><h1> This is side bar </h1>
+        <div class="advertise"> <h1> This is Advertise </h1>
+               </div>
+    </aside>
+
+    <footer>
+        <h1> This is footer </h1>
+    </footer>
+    
 </body>
 </html>
