--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-<header>This Header section</header>
-<nav>
+<body class="container">
+<header class="header">
+    This Header section</header>
+
+    <nav class="nav">
     <ul>
         <li><a href=""> NAV1 </a></li>
         <li><a href=""> NAV2 </a></li>
         <li><a href=""> NAV3 </a></li>
     </ul>
 </nav>
- <main>
+
+    <main class="main">
     <h2>This is Main Aritcale area </h2>
     <p>Lorem ipsum dolor sit amet consectetur 
         adipisicing elit. Iste dignissimos id
@@ -25,13 +28,15 @@
           ea unde natus deserunt,
          labore aperiam dolores voluptatum. Culpa!</p>
  </main>
-    <aside>
-        <div class="sidebar"><h1> This is side bar </h1>
+    
+        <aside class="aside">
+        <div class="sidebar"><h1> This is side bar </h1></div>
         <div class="advertise"> <h1> This is Advertise </h1>
                </div>
     </aside>
 
-    <footer>
+ 
+        <footer class="footer">
         <h1> This is footer </h1>
     </footer>
     
