Grid Template Without Responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body class="container">
 <header class="header">
-    This Header section</header>
+  <h1>  This is  Header section  
+     </h1>
+    </header>
 
     <nav class="nav">
     <ul>
@@ -27,14 +29,12 @@
           quo ullam culpa corporis possimus, 
           ea unde natus deserunt,
          labore aperiam dolores voluptatum. Culpa!</p>
- </main>
-    
-        <aside class="aside">
+ </main>    
+        <aside>
         <div class="sidebar"><h1> This is side bar </h1></div>
         <div class="advertise"> <h1> This is Advertise </h1>
-               </div>
-    </aside>
-
+        </div>
+       </aside>
  
         <footer class="footer">
         <h1> This is footer </h1>
